[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/row_def/row_def.gd" type="Script" id=1]
[ext_resource path="res://scripts/row_def/type.gd" type="Script" id=2]
[ext_resource path="res://scripts/row_def/level.gd" type="Script" id=3]

[node name="RowDef" type="HBoxContainer"]
margin_right = 353.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="RowNum" type="Label" parent="."]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "1"

[node name="Level" type="MenuButton" parent="."]
margin_left = 12.0
margin_right = 58.0
margin_bottom = 24.0
focus_mode = 2
text = "Level"
flat = false
items = [ "Paragraph", null, 0, false, false, 0, 0, null, "", false, "Phrase", null, 0, false, false, 1, 0, null, "", false, "Word", null, 0, false, false, 2, 0, null, "", false, "Morpheme", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 3 )

[node name="Type" type="MenuButton" parent="."]
margin_left = 62.0
margin_right = 104.0
margin_bottom = 24.0
focus_mode = 2
text = "Type"
flat = false
script = ExtResource( 2 )

[node name="Italic" type="CheckBox" parent="."]
margin_left = 108.0
margin_right = 168.0
margin_bottom = 24.0
text = "Italic"

[node name="Bold" type="CheckBox" parent="."]
margin_left = 172.0
margin_right = 229.0
margin_bottom = 24.0
text = "Bold"

[node name="Quotes" type="CheckBox" parent="."]
margin_left = 233.0
margin_right = 353.0
margin_bottom = 24.0
text = "'Single quotes'"

[connection signal="level_changed" from="Level" to="Type" method="_on_level_changed"]
